add language support

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,19 +27,19 @@
             <div class="btn-group justified">
                 <a href="#/index" class="btn btn-navbar">
                     <i class="kk kk-30 kk-tab-1"></i>
-                    <span class="block text-gray">首页</span>
+                    <span class="block text-gray">{{"Home" | translate}}</span>
                 </a>
                 <a href="#/release_task" class="btn btn-navbar">
                     <i class="kk kk-30 kk-tab-2"></i>
-                    <span class="block text-gray">发布任务</span>
+                    <span class="block text-gray">{{"Create Task" | translate}}</span>
                 </a>
                 <a href="#/tasks" class="btn btn-navbar">
                     <i class="kk kk-30 kk-tab-3"></i>
-                    <span class="block text-gray">任务清单</span>
+                    <span class="block text-gray">{{"Task List" | translate}}</span>
                 </a>
                 <a href="#/translators" class="btn btn-navbar">
                     <i class="kk kk-30 kk-tab-4"></i>
-                    <span class="block text-gray">悠译人</span>
+                    <span class="block text-gray">{{"UE" | translate}}</span>
                 </a>
             </div>
         </div>
