--- a/www/index.html
+++ b/www/index.html
@@ -27,19 +27,19 @@
             <div class="btn-group justified">
                 <a href="#/index" class="btn btn-navbar">
                     <i class="kk kk-30 kk-tab-1"></i>
-                    <span class="block text-gray">{{"Home" | translate}}</span>
+                    <span class="block text-gray text-ellipsis">{{"Home" | translate}}</span>
                 </a>
                 <a href="#/release_task" class="btn btn-navbar">
                     <i class="kk kk-30 kk-tab-2"></i>
-                    <span class="block text-gray">{{"Create Task" | translate}}</span>
+                    <span class="block text-gray text-ellipsis">{{"Create Task" | translate}}</span>
                 </a>
                 <a href="#/tasks" class="btn btn-navbar">
                     <i class="kk kk-30 kk-tab-3"></i>
-                    <span class="block text-gray">{{"Task List" | translate}}</span>
+                    <span class="block text-gray text-ellipsis">{{"Task List" | translate}}</span>
                 </a>
                 <a href="#/translators" class="btn btn-navbar">
                     <i class="kk kk-30 kk-tab-4"></i>
-                    <span class="block text-gray">{{"UE" | translate}}</span>
+                    <span class="block text-gray text-ellipsis">{{"UE" | translate}}</span>
                 </a>
             </div>
         </div>
