--- a/www/index.html
+++ b/www/index.html
@@ -25,21 +25,25 @@
         </div>
         <div class="navbar navbar-app navbar-absolute-bottom">
             <div class="btn-group justified">
-                <a href="#/index" class="btn btn-navbar">
+                <a ng-href="#/index" class="btn btn-navbar section-wide">
                     <i class="kk kk-30 kk-tab-1"></i>
                     <span class="block text-gray text-ellipsis">{{"Home" | translate}}</span>
                 </a>
-                <a href="#/release_task" class="btn btn-navbar">
-                    <i class="kk kk-30 kk-tab-2"></i>
-                    <span class="block text-gray text-ellipsis">{{"Create Task" | translate}}</span>
-                </a>
-                <a href="#/tasks" class="btn btn-navbar">
+                <a ng-href="#/tasks" class="btn btn-navbar section-wide">
                     <i class="kk kk-30 kk-tab-3"></i>
                     <span class="block text-gray text-ellipsis">{{"Task List" | translate}}</span>
                 </a>
-                <a href="#/translators" class="btn btn-navbar">
+                <a ng-href="#/release_task" class="btn btn-navbar section-wide">
+                    <i class="kk kk-30 kk-tab-6"></i>
+                    <span class="block text-gray text-ellipsis">{{"Create Task" | translate}}</span>
+                </a>
+                <a ng-href="#/translators" class="btn btn-navbar section-wide">
                     <i class="kk kk-30 kk-tab-4"></i>
                     <span class="block text-gray text-ellipsis">{{"UE" | translate}}</span>
+                </a>
+                <a ng-href="https://appsto.re/cn/ynET5.i" class="btn btn-navbar section-wide">
+                    <i class="kk kk-30 kk-tab-5"></i>
+                    <span class="block text-gray text-ellipsis">{{"Messages/chat" | translate}}</span>
                 </a>
             </div>
         </div>
