--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
                     <i class="kk kk-30 kk-tab-4"></i>
                     <span class="block text-gray text-ellipsis">{{"UE" | translate}}</span>
                 </a>
-                <a ng-href="https://appsto.re/cn/ynET5.i" class="btn btn-navbar section-wide">
+                <a ng-click="showDialog()" class="btn btn-navbar section-wide">
                     <i class="kk kk-30 kk-tab-5"></i>
                     <span class="block text-gray text-ellipsis">{{"Messages/chat" | translate}}</span>
                 </a>
