--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="Youyi" ng-class="{'off-top':!navbar.top,'off-bottom':!navbar.bottom}">
 
 <head>
     <meta charset="utf-8" />
-    <title>Youyi</title>
+    <title>{{"UE lives"|translate}}</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
@@ -13,7 +13,7 @@
     <script src="js/app.min.js"></script>
 </head>
 
-<body ng-app="Youyi" ng-class="{'off-top':!navbar.top,'off-bottom':!navbar.bottom}">
+<body>
     <!-- Sidebars -->
     <div ng-include="'sidebar.html'" ui-track-as-search-param='true' class="sidebar sidebar-left" ng-controller="sidebarController"></div>
     <div class="app">
