--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <script src="js/app.min.js"></script>
 </head>
 
-<body>
+<body ng-cloak>
     <!-- Sidebars -->
     <div ng-include="'sidebar.html'" ui-track-as-search-param='true' class="sidebar sidebar-left" ng-controller="sidebarController"></div>
     <div class="app">
@@ -25,19 +25,19 @@
         </div>
         <div class="navbar navbar-app navbar-absolute-bottom">
             <div class="btn-group justified">
-                <a ng-href="#/index" class="btn btn-navbar section-wide">
+                <a ng-click="to('index')" class="btn btn-navbar section-wide" ng-class="{'active':current_path=='/index'}">
                     <i class="kk kk-30 kk-tab-1"></i>
                     <span class="block text-gray text-ellipsis">{{"Home" | translate}}</span>
                 </a>
-                <a ng-href="#/tasks" class="btn btn-navbar section-wide">
+                <a ng-click="to('tasks')" class="btn btn-navbar section-wide" ng-class="{'active':current_path=='/tasks'}">
                     <i class="kk kk-30 kk-tab-3"></i>
                     <span class="block text-gray text-ellipsis">{{"Task List" | translate}}</span>
                 </a>
-                <a ng-href="#/release_task" class="btn btn-navbar section-wide">
+                <a ng-click="to('release_task')" class="btn btn-navbar section-wide" ng-class="{'active':current_path=='/release_task'}">
                     <i class="kk kk-30 kk-tab-6"></i>
                     <span class="block text-gray text-ellipsis">{{"Create Task" | translate}}</span>
                 </a>
-                <a ng-href="#/translators" class="btn btn-navbar section-wide">
+                <a ng-click="to('translators')" class="btn btn-navbar section-wide" ng-class="{'active':current_path=='/translators'}">
                     <i class="kk kk-30 kk-tab-4"></i>
                     <span class="block text-gray text-ellipsis">{{"UE" | translate}}</span>
                 </a>
