--- a/www/index.html
+++ b/www/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <title>{{"UE lives"|translate}}</title>
+    <!-- <base href="/"> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
     <link rel="stylesheet" href="css/app.min.css" />
-    
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script src="js/app.min.js"></script>
 </head>
 
