--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="Youyi" ng-class="{'off-top':!navbar.top,'off-bottom':!navbar.bottom}">
+<html ng-app="Youyi" ng-class="{'off-top':!navbar.top,'off-bottom':!navbar.bottom}" xmlns:wb="http://open.weibo.com/wb">
 
 <head>
     <meta charset="utf-8" />
@@ -65,6 +65,19 @@
     </div>
     <!-- ~ .app -->
     <div ui-yield-to="modals"></div>
+    
+    <script>
+    (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {
+            return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    </script>
 </body>
 
 </html>
