--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
     <link rel="stylesheet" href="css/app.min.css" />
     <!-- inject:js -->
+    <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=622824244&debug=true" type="text/javascript" charset="utf-8"></script>
     <script src="js/app.min.js"></script>
 </head>
 
@@ -65,7 +66,6 @@
     </div>
     <!-- ~ .app -->
     <div ui-yield-to="modals"></div>
-    
     <script>
     (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
