--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
     <link rel="stylesheet" href="css/app.min.css" />
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=622824244&debug=true" type="text/javascript" charset="utf-8"></script>
     <script src="js/app.min.js"></script>
 </head>
 
@@ -66,6 +65,7 @@
     </div>
     <!-- ~ .app -->
     <div ui-yield-to="modals"></div>
+    <!-- facebook jssdk -->
     <script>
     (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
@@ -77,6 +77,19 @@
         js.src = "//connect.facebook.net/en_US/sdk.js";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <!-- weibo jssdk -->
+    <script>
+    (function(d, s, id) {
+        var js, sjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {
+            return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=622824244&debug=true";
+        sjs.parentNode.insertBefore(js, sjs);
+    }(document, 'script', 'sina-jssdk'));
     </script>
 </body>
 
