--- a/www/index.html
+++ b/www/index.html
@@ -87,8 +87,8 @@
         }
         js = d.createElement(s);
         js.id = id;
-        // js.src = "http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=622824244&debug=true";
-        js.src = "http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=622824244";
+        js.src = "http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=622824244&debug=true";
+        // js.src = "http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=622824244";
         sjs.parentNode.insertBefore(js, sjs);
     }(document, 'script', 'sina-jssdk'));
     </script>
