--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,10 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
     <link rel="stylesheet" href="css/app.min.css" />
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/angular.js/1.4.6/angular.min.js"></script>
+    <script src="//cdn.bootcss.com/angular.js/1.4.6/angular-route.min.js"></script>
+    
     <script src="js/app.min.js"></script>
 </head>
 
@@ -65,6 +68,40 @@
     </div>
     <!-- ~ .app -->
     <div ui-yield-to="modals"></div>
+    <!-- async load js -->
+    <!--<script type="text/javascript" id="js-container">
+    (function(d, s) {
+        var _js = {
+            "sanitize": "//cdn.bootcss.com/angular-sanitize/1.4.6/angular-sanitize.min.js",
+            "flow": "//cdn.bootcss.com/ng-flow/2.6.1/ng-flow-standalone.min.js",
+            "timer": "//cdn.bootcss.com/angular-timer/1.3.3/angular-timer.min.js",
+            "moment": "//cdn.bootcss.com/moment.js/2.9.0/moment.min.js",
+            "carousel": "//cdn.bootcss.com/owl-carousel/1.32/owl.carousel.min.js",
+            "translate": "//cdn.bootcss.com/angular-translate/2.8.0/angular-translate.min.js",
+            "translate-loader": "//cdn.bootcss.com/angular-translate-loader-static-files/2.8.0/angular-translate-loader-static-files.min.js"
+        };
+        for (key in _js) {
+            var js, id = key,
+                yjs = d.getElementById("js-container");
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = _js[key];
+            yjs.parentNode.insertBefore(js, yjs);
+        }
+    }(document, 'script'));
+    </script>
+    -->
+    <script src="//cdn.bootcss.com/angular-sanitize/1.4.6/angular-sanitize.min.js"></script>
+    <script src="//cdn.bootcss.com/ng-flow/2.6.1/ng-flow-standalone.min.js"></script>
+    <script src="//cdn.bootcss.com/angular-timer/1.3.3/angular-timer.min.js"></script>
+    <script src="//cdn.bootcss.com/moment.js/2.9.0/moment.min.js"></script>
+    <script src="//cdn.bootcss.com/owl-carousel/1.32/owl.carousel.min.js"></script>
+    <script src="//cdn.bootcss.com/angular-translate/2.8.0/angular-translate.min.js"></script>
+    <script src="//cdn.bootcss.com/angular-translate-loader-static-files/2.8.0/angular-translate-loader-static-files.min.js"></script>
+    
     <!-- facebook jssdk -->
     <script>
     (function(d, s, id) {
@@ -88,9 +125,21 @@
         js = d.createElement(s);
         js.id = id;
         js.src = "http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=622824244&debug=true";
-        // js.src = "http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=622824244";
         sjs.parentNode.insertBefore(js, sjs);
     }(document, 'script', 'sina-jssdk'));
+    </script>
+    <!-- weixin jssdk -->
+    <script>
+    (function(d, s, id) {
+        var js, wjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {
+            return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "http://res.wx.qq.com/open/js/jweixin-1.0.0.js";
+        wjs.parentNode.insertBefore(js, wjs);
+    }(document, 'script', 'weixin-jssdk'));
     </script>
 </body>
 
